# capstone_data_pipeline_reddit

./: command_data_eng_capstone.txt  pyproject.toml
airflow/: Dockerfile  README.md  docker-compose.yml
airflow/mnt/dags/: dbt_visualization.py  reddit_api_dag.py  reddit_dbt_dag.py
airflow/mnt/dags/output/: dashboard.html
airflow/mnt/dags/templates/: dashboard_template.html
airflow/mnt/logs/scheduler/: latest
airflow/reddit/: pyproject.toml
airflow/reddit/reddit/: .user.yml  dbt_project.yml  profiles.yml
airflow/reddit/reddit/models/: _src_reddit.yml  average_score.sql  avg_comments_per_day.sql  count_post_model.sql  interesting_trend.sql  posts_per_day.sql  total_authors_posts.sql  trending_topics.sql
