[tool.poetry]
name = "capstone-data-pipeline-reddit"
version = "0.1.0"
description = ""
authors = ["penquin501 <48145677+penquin501@users.noreply.github.com>","66130047@dpu.ac.th"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
praw = "^7.7.1"
dbt-postgres = "^1.7.11"
streamlit = "^1.34.0"
matplotlib = "^3.8.4"
apache-airflow-providers-postgres = "^5.10.2"
pendulum = "2.1.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
